# neural_network

./: .gitignore  Data-Preprocessing.ipynb  Evaluation.ipynb  Multilayer-Perceptron.ipynb  Mutlilayer Perceptron.ipynb  README.md  neural-network-configs-test-set.csv  neural-network-configs-validation-set.csv  neural_network.py  pyproject.toml  requirements.txt  sigmoid-6-0.2-mo-sa.csv  sigmoid-6-0.2-mo-sa.json  sigmoid-6-0.2-sa.csv  sigmoid-6-0.2-sa.json  sigmoid-6-0.2.csv  sigmoid-6-0.2.json  standardisation.json  tanh-4-0.4.csv  tanh-4-0.4.json
data/: neural-network-selected-configs-test-set.csv  neural-network-selected-configs-validation-set.csv  ouse93-96-cleansed-data.xlsx  sigmoid-6-0.2-bold-driver-weight-decay.csv  sigmoid-6-0.2-bold-driver.csv  sigmoid-6-0.2-momentum-bold-driver-weight-decay.csv  sigmoid-6-0.2-momentum-bold-driver.csv  sigmoid-6-0.2-momentum-simulated-annealing-weight-decay.csv  sigmoid-6-0.2-momentum-simulated-annealing.csv  sigmoid-6-0.2-momentum-weight-decay.csv  sigmoid-6-0.2-momentum.csv  sigmoid-6-0.2-simulated-annealing-final.csv  sigmoid-6-0.2-simulated-annealing-weight-decay.csv  sigmoid-6-0.2-simulated-annealing.csv  sigmoid-6-0.2-weight-decay.csv  test-set.csv  training-set.csv
example/: example.py  validation-set.csv
neural-networks/: sigmoid-6-0.2-simulated-annealing-final.json  slide-example.json
neural_network/: activation_functions.py  backpropagation.py  neural_network.py
